--- a/Index.html
+++ b/Index.html
@@ -11,55 +11,32 @@
         }
 
         .resume-container {
-            display: flex;
             max-width: 1200px;
             margin: 0 auto;
-            width: 100%;
             border: 2px solid #eff1f3;
             background-color: #eff1f3;
+            display: flex;
         }
 
         .left-section {
-            width: 50%;
             padding: 30px;
+            width: 20%;
             border-top-right-radius: 30px; /* Curved top left corner */
             border-bottom-right-radius: 30px; /* Curved bottom left corner */
             background-color: #0b1e3b;
             box-shadow: 0 0 10px rgba(15, 16, 78, 0.1);
+            color: white;
         }
 
         .right-section {
-            width: 50%;
+            width: 80%;
             padding: 30px;
+            color: black;
         }
 
         h1 {
             color: white;
             text-align: center;
-        }
-
-        .contact p {
-            color: white;
-        }
-
-        .Technical_Skills h2{
-            color: white;
-        }
-
-        .Technical_Skills{
-            color: white;
-        }
-
-        .footer p {
-            color: white;
-        }
-
-        p {
-            color: black;
-        }
-
-        h2{
-            color: #0b1e3b;
         }
 
         img {
@@ -72,17 +49,13 @@
             border: 1px solid white;
         }
 
-        .Download_Button{
-            text-align: center;
-        }
-
         hr {
             margin-top: 0%; /* Adjust the top margin as needed */
             margin-bottom: 20px; /* Adjust the bottom margin as needed */
             border: none; /* Remove default border */
             height: 2px; /* Adjust the thickness as needed */
             background-color: #0b1e3b;
-            }
+        }
 
     </style>
 </head>
@@ -90,7 +63,7 @@
 
     <div class="resume-container">
         <div class="left-section">
-            <img src="Anni.jpg" alt="Your Profile Picture">
+            <img src="Aniket.jpg" alt="Your Profile Picture"></iframe>
 
             <h1><b>Aniket</b></h1><br>
             
@@ -182,8 +155,8 @@
             <div class="Declaration">
                 <h2>Declaration<hr></h2>
                 <p>I hereby declare that above mentioned information is correct anf true to the best of my knowledge and belief.</p>
-                <p><b>DATE</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:March,2024</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;<b>SIGNATURE</b></p>
-                <p><b>PLACE</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:Chandigarh</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>ANIKET</b></p>
+                <p><b>DATE</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:March,2024</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>SIGNATURE</b></p>
+                <p><b>PLACE</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>:Chandigarh</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>ANIKET</b></p>
             </div>
             </div>
           </body>
