--- a/Index.html
+++ b/Index.html
@@ -6,21 +6,26 @@
     <title>Aniket</title>
     <style>
         body {
+            body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
+        }
         }
 
         .resume-container {
-            max-width: 1200px;
+            width: 210mm; /* A4 width */
+            height: 297mm; /* A4 height */
             margin: 0 auto;
+            padding: 20mm;
             border: 2px solid #eff1f3;
-            background-color: #eff1f3;
+            background-color: white;
             display: flex;
         }
 
         .left-section {
-            padding: 30px;
-            width: 20%;
+            padding: 20px;
+            width: 30%;
             border-top-right-radius: 30px; /* Curved top left corner */
             border-bottom-right-radius: 30px; /* Curved bottom left corner */
             background-color: #0b1e3b;
@@ -30,8 +35,9 @@
 
         .right-section {
             width: 80%;
-            padding: 30px;
+            padding: 20px;
             color: black;
+            background-color: white;
         }
 
         h1 {
